--- a/macros.tex
+++ b/macros.tex
@@ -96,6 +96,8 @@ emphstyle={\color{self}\slshape},
 
 \renewcommand{\comment}[1]{}
 \newcommand{\mc}[1]{\mathcal{#1}}
+\newcommand{\mbf}[1]{\mathbf{#1}}
+
 \newcommand{\half}{\frac{1}{2}}
 
 \def\B{\{0,1\}}
